# flowcatalyst

./: .air.toml  .env.development  .gitattributes  .gitignore  .golangci.yml  .npmrc  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  INSTALL.md  Makefile  PLAN.md  README.md  docker-compose.yml  dump.rdb  go.mod  go.sum  install.ps1  install.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts  sqlc.yaml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-platform-nonprod.yml  deploy-router-qa.yml  generate-sdks.yml  publish-docker.yml  release-fc-dev.yml  split-laravel-sdk.yml  split-typescript-sdk.yml
api/: openapi.lock.json
apps/flowcatalyst/: .env.example  .env.message-router.example  Dockerfile  README.md  drizzle.config.ts  package.json  sea-config.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/platform-frontend/: components.d.ts  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
clients/mcp-server/: README.md  package.json  tsconfig.json
clients/typescript-sdk/: README.md  openapi-ts.config.ts  package.json
cmd/decrypt-check/: main.go
cmd/fc-dev/: db.go  embedded.go  envcfg.go  fresh.go  helpers.go  init.go  main.go  mcp.go  mcp_bootstrap.go  outbox.go  outbox_create_table.go  outbox_create_table_test.go  outbox_token.go  pidfile.go  start.go  stop.go  upgrade.go  version.go
cmd/fc-mcp-server/: main.go
cmd/fc-outbox-processor/: main.go
cmd/fc-platform-server/: main.go
cmd/fc-router/: main.go
cmd/fc-server/: main.go
cmd/fc-stream-processor/: main.go
core/flowcatalyst-dispatch-scheduler/: build.gradle.kts
core/flowcatalyst-message-router/: ARCHITECTURE.md
core/flowcatalyst-message-router-vertx/: build.gradle.kts
core/flowcatalyst-platform/: build.gradle.kts
crates/fc-common/: Cargo.toml
crates/fc-mcp/: Cargo.toml
crates/fc-mcp/src/: api_client.rs  auth.rs  config.rs  lib.rs  server.rs
crates/fc-platform/: Cargo.toml
crates/fc-queue/: Cargo.toml
crates/fc-router/: ARCHITECTURE.md  Cargo.toml
crates/fc-scheduler/: Cargo.toml
crates/fc-sdk/: Cargo.toml
crates/fc-stream/: Cargo.toml
docs/: api-parity.md  architecture.md  auth-hardening-plan.md  builds.md  conventions.md  db-index-plan.md  deferred-auth-consolidation.md  deferred-codebase-review.md  embedded-postgres-postgis.md  environment-variables.md  fc-dev-self-update.md  frontend-api-types-adoption.md  laravel-sdk-compat.md  oidc-logout.md  oidc-provider.md  oidc-security-audit.md  parity-remediation-plan.md  partitioning.md  platform.md  portal-identity-plan.md  release-signing.md  router-rust-alignment.md  scheduler.md  sdk-envelope-port-plan.md  spa-go-compat-fixes.md  sqlc.md  stream-processor.md  usecase-envelope-migration-handover.md  usecase-pattern.md  user-impersonation-plan.md
docs/adr/: 0001-session-token-vs-oauth.md
docs/architecture/: outbox-processor.md
docs/developers/: README.md  quickstart.md
flowcatalyst-go/: .air.platform.toml  .air.stream.toml  .gitignore  Procfile.dev  README.md  go.mod  go.sum
flowcatalyst-go/docs/: CONFIGURATION.md
flowcatalyst-rust/: .gitignore  Cargo.toml
flowcatalyst-rust/crates/fc-router/: Cargo.toml
flowcatalyst-rust/crates/fc-router/resources/: dashboard.html
flowcatalyst-rust/crates/fc-router/src/: circuit_breaker_registry.rs  config_sync.rs  lib.rs  manager.rs  mediator.rs  metrics.rs  notification.rs  pool.rs  warning.rs
flowcatalyst-rust/crates/fc-router/src/api/: auth.rs  mod.rs
flowcatalyst-rust/crates/fc-router/tests/: fifo_tests.rs  integration_tests.rs  manager_tests.rs  mediator_tests.rs  pool_tests.rs  rate_limit_tests.rs
flowcatalyst-rust/crates/fc-stream/: Cargo.toml
flowcatalyst-rust/crates/fc-stream/src/: batch_dispatcher.rs  checkpoint.rs  checkpoint_tracker.rs  config.rs  health.rs  index_initializer.rs  lib.rs  mock.rs  projection.rs  standby.rs  subscription_matcher.rs  watcher.rs
flowcatalyst-typescript/: .dockerignore  .oxfmtrc.json  .oxlintrc.json  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
frontend/: .gitignore  embed.go  handler.go  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
internal/common/: config.go  dispatch_status.go  mediation.go  message.go  message_test.go  metrics.go  outbox.go
internal/config/: config.go  config_test.go
internal/envutil/: envutil.go  envutil_test.go
internal/logging/: logging.go
internal/mcp/: config.go  server.go
internal/migrate/: embed.go  migrate.go  migrate_test.go
internal/outbox/: group_distributor.go  group_distributor_test.go  http_dispatcher.go  http_dispatcher_test.go  processor.go  repository.go
internal/queue/: queue.go  queue_test.go
internal/router/: broker_stats.go  broker_stats_test.go  circuit_breaker.go  circuit_breaker_test.go  config_sync.go  error.go  health.go  health_test.go  health_types.go  host_limiter.go  host_limiter_test.go  inflight.go  inflight_test.go  lifecycle.go  manager.go  manager_route_test.go  manager_stopped_consumer_test.go  mediator.go  mediator_test.go  metrics.go  metrics_test.go  notification.go  pool.go  pool_cascade_test.go  queue_health.go  (+6 more)
migrations/: 004_messaging_tables.sql  012_optimize_event_dispatch_id_columns.sql  013_drop_connection_endpoint.sql  013_move_endpoint_to_subscription.sql  014_fix_login_attempts_identifier.sql  014_widen_attempt_type.sql  017_dispatch_pool_rate_limit_nullable.sql  018_partition_messaging_tables.sql  018_partition_prep.sql  019_partition_messaging_tables.sql  020_webauthn_credentials.sql  021_scheduled_jobs.sql  022_partition_scheduled_job_history.sql  023_partman_takeover.sql
scripts/: e2e_auth_controls.sh  release.sh
(+3071 files in other folders)
