[package]
name = "fc-mcp"
version = "0.1.0"
edition.workspace = true
description = "FlowCatalyst MCP server — gives AI agents read-only access to event types and subscriptions"
license.workspace = true

[dependencies]
# Official Rust MCP SDK. transport-io = stdio, transport-streamable-http-server =
# the HTTP transport used when the server is hosted instead of stdio-spawned.
rmcp = { version = "1.6", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "0.8"

tokio = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
# Used by Config::from_env() to locate the credentials file that
# fc-dev's mcp_bootstrap writes (`~/.cache/flowcatalyst-dev/mcp-credentials.json`).
dirs = "5"
