[package]
name = "fc-stream"
version.workspace = true
edition.workspace = true

[dependencies]
fc-common = { path = "../fc-common" }
fc-standby = { path = "../fc-standby", optional = true }
tokio = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12"
redis = { workspace = true }

[features]
standby = ["dep:fc-standby"]
